[gd_scene format=3 uid="uid://c6x8234568aa"]

[ext_resource type="Script" uid="uid://cno17f3hwhb6k" path="res://favourites_item.gd" id="1_item"]

[node name="FavouritesItem" type="PanelContainer" unique_id=773938590]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 1
script = ExtResource("1_item")

[node name="Content" type="HBoxContainer" parent="." unique_id=1654220669]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DragHandle" type="Label" parent="Content" unique_id=364991993]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
mouse_filter = 1
text = " â˜° "
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelName" type="Label" parent="Content" unique_id=42401134]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cart Name"
vertical_alignment = 1
clip_text = true

[node name="LabelAuthor" type="Label" parent="Content" unique_id=283923079]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Author"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true
